[package]
name = "currency_converter"
version = "0.1.0"
authors = ["Vsevolod Galaktionov <vsevolodg@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.1", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
